plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.3'
}

version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot web starter (REST + MVC)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    
    // WebClient for HTTP calls to other services
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Scheduling support for @Scheduled
    implementation 'org.springframework.boot:spring-boot-starter'

    // JSON support
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // Spring Boot testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring Security support
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Redis support
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    
    // MongoDB support (for match records)
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
}